Se cambia el color y se agrega otro h1

--- a/index.html
+++ b/index.html
@@ -6,8 +6,12 @@
     <title>Document</title>
 </head>
 <body>
-    <h1
-    >Aprendiendo Git
+    <h1>
+        Aprendiendo Git
     </h1>
+    <h2 style="color:blue">
+        Aprendiendo Git
+    </h2>
+
 </body>
 </html>
