--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
             </div>
             <button class="btn btn-primary" type="submit">Guardar</button>
             <button class="btn btn-secundary" type="button">Limpiar</button>
+            <button class="btn btn-secundary" type="button">Cancelar</button>
           </form>
         </div>
       </div>
